# onryou

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: anki_path.rs  lib.rs  main.rs  normalization.rs  proxy.rs
src/proxy/: connect.rs  default.rs  post.rs
