[package]
name = "onryou"
version = "0.0.1"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
min_ident_chars = "warn"

# temporarily, will remove in the future
missing_panics_doc =  { level = "allow", priority = 1 } 
missing_errors_doc =  { level = "allow", priority = 1 } 

[dependencies]
env_logger = "0.11.5"
hyper = { version = "1.5.0", features = ["full"] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.132"
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["json"] }
