[package]
name = "onryou"
version = "0.0.1"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
min_ident_chars = "warn"

# temporarily, will remove in the future
missing_errors_doc =  { level = "allow", priority = 1 } 

[dependencies]
anyhow = "1.0.92"
dirs = "5.0.1"
env_logger = "0.11.5"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1.5.0", features = ["full"] }
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
